--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^4.0.0-beta.14",
     "jsonwebtoken": "^9.0.2",
     "next": "15.0.3",
     "pg": "^8.13.1",
